rtnetlink: Align RTA_MULTIPATH length validation in nlattr_get

Fix length validation of RTA_MULTIPATH attributes in
nlattr_get_multipath() by making sure the user request is align.

PR:		295102
Reported by:	Robert Morris <rtm@lcs.mit.edu>
Reviewed by:	markj
Fixes:		7e5bf68495cc ("netlink: add netlink support")
MFC after:	3 days
Differential Revision: https://reviews.freebsd.org/D56963

(cherry picked from commit 4329663a861ef74796b79b6b0872cfe10d31c591)